Spice up demo page and readme

--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
     <center>
       <h1>ＭＡＫＥＴＥＲＭ</h1>
       <hr>
-      <p>ＤＥＭＯ／ＢＯＯＫＭＡＲＫＬＥＴ　ＢＥＬＯＷ</p>
 
+      <p>ＤＥＭＯ／ＢＯＯＫＭＡＲＫＬＥＴ</p>
+
+      <strong>
       <a href="
 javascript: (function () {
   const css = `
@@ -83,8 +85,13 @@ javascript: (function () {
       ">
         ＭＡＫＥＴＥＲＭ
       </a>
+      </strong>
 
-      <p>※ＵＬＴＲＡ ＧＲＡＰＨＩＣＳ ＲＥＱＵＩＲＥＳ Ａ ＦＵＮＣＴＩＯＮＩＮＧ ＩＮＴＥＲＮＥＴ ＣＯＮＮＥＣＴＩＯＮ （２４００ ＢＡＵＤ ＷＡＲＮＩＮＧ）</p>
+      <p>ＳＣＲＥＥＮ ＳＨＯＴ</p>
+      <img src="screenshot.gif"></img>
+
+      <p>※ＵＬＴＲＡ ＧＲＡＰＨＩＣＳ ＲＥＱＵＩＲＥＳ Ａ ＧＯＯＤ　ＢＬＩＴＴＥＲ　＆ ＦＵＮＣＴＩＯＮＩＮＧ ＩＮＴＥＲＮＥＴ ＣＯＮＮＥＣＴＩＯＮ （２４００ ＢＡＵＤ ＷＡＲＮＩＮＧ）</p>
+      <p>※ＣＯＮＴＥＮＴ　ＳＥＣＵＲＩＴＹ　ＰＯＬＩＣＹ　ＭＡＹ　ＢＬＯＣＫ　ＳＣＲＩＰＴ　ＦＲＯＭ　ＲＵＮＮＩＮＧ</p>
     </center>
   </body>
 </html>
