Add GitHub link to index.html

--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@ javascript: (function () {
 
       <p>※ＵＬＴＲＡ ＧＲＡＰＨＩＣＳ ＲＥＱＵＩＲＥＳ Ａ ＧＯＯＤ　ＢＬＩＴＴＥＲ　＆ ＦＵＮＣＴＩＯＮＩＮＧ ＩＮＴＥＲＮＥＴ ＣＯＮＮＥＣＴＩＯＮ （２４００ ＢＡＵＤ ＷＡＲＮＩＮＧ）</p>
       <p>※ＣＯＮＴＥＮＴ　ＳＥＣＵＲＩＴＹ　ＰＯＬＩＣＹ　ＭＡＹ　ＢＬＯＣＫ　ＳＣＲＩＰＴ　ＦＲＯＭ　ＲＵＮＮＩＮＧ</p>
+      <p><a href="https://github.com/gyng/maketerm">※ＧＩＴＨＵＢ　ＰＲＯＪＥＣＴ　ＰＡＧＥ</a></p>
     </center>
   </body>
 </html>
