--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@ javascript: (function () {
       </strong>
 
       <p>ＳＣＲＥＥＮ　ＳＨＯＴ</p>
-      <img src="screenshot.gif"></img>
+      <img src="screenshot.gif" style="max-width: 90vw"></img>
 
       <p>※ＵＬＴＲＡ　ＧＲＡＰＨＩＣＳ　ＲＥＱＵＩＲＥＳ　Ａ　ＧＯＯＤ　ＢＬＩＴＴＥＲ　＆　ＦＵＮＣＴＩＯＮＩＮＧ　ＩＮＴＥＲＮＥＴ　ＣＯＮＮＥＣＴＩＯＮ　（２４００　ＢＡＵＤ　ＷＡＲＮＩＮＧ）</p>
       <p>※ＣＯＮＴＥＮＴ　ＳＥＣＵＲＩＴＹ　ＰＯＬＩＣＹ　ＭＡＹ　ＢＬＯＣＫ　ＳＣＲＩＰＴ　ＦＲＯＭ　ＲＵＮＮＩＮＧ</p>
