Use iframe for test dmeo

--- a/test.js.html
+++ b/test.js.html
@@ -1,14 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html style="margin: 0; height: 100%; width: 100%">
   <head>
     <title>ＭＡＫＥＴＥＲＭ</title>
     <meta charset="UTF-8">
   </head>
-  <body>
-    <div>
-    <div style=" width: 90vw; height: 90vh; background-image: url(http://il2.picdn.net/shutterstock/videos/3257353/thumb/1.jpg); background-size: 100%">olllllllllsdfdsfsdfsdfdsl</div>
-    </div>
-
+  <body style="margin: 0; height: 100%; width: 100%;">
+    <iframe src="http://en.wikipedia.com" style="margin: auto; width: 80%; height: 80%;"></iframe>
     <script src="maketerm.js"></script>
   </body>
 </html>
