--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
       <a href="
 javascript: (function () {
   const css = `
+    :root {
+      --filter-chain: sepia(90%) invert(100%) hue-rotate(180deg) blur(0.2px) brightness(170%);
+    }
+
     body {
       background-blend-mode: overlay;
       background-color: #0A0A0A;
@@ -24,10 +28,9 @@ javascript: (function () {
         0 0 10px rgba(255, 192, 192, 0.3);
     }
 
-    body > *:not(.overlay) {
+    body > *:not(.mt-overlay) {
       background-blend-mode: overlay;
       background-color: transparent;
-      --filter-chain: sepia(90%) invert(100%) hue-rotate(180deg) blur(0.2px) brightness(170%);
       filter: var(--filter-chain) !important;
       -webkit-filter: var(--filter-chain) !important;
     }
@@ -38,7 +41,7 @@ javascript: (function () {
       -webkit-filter: var(--filter-chain);
     }
 
-    .overlay {
+    .mt-overlay {
       position: fixed;
       top: 0;
       left: 0;
@@ -48,27 +51,27 @@ javascript: (function () {
       pointer-events: none;
     }
 
-    #grill {
+    #mt-grill {
       background-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAADAAAAAwCAMAAABg3Am1AAAAJ1BMVEUAAGwAANkAAP8ALAAANAAAbAAA2QAA3gAA4QAA/wBsAADZAAD/AACoIOABAAAAVUlEQVR42u2RwQ3AIAwDHVoMIew/bxdIJPj14Z91VhRLhxWxOtlhdpQRewfdaa3ZSb4+uJ/EJ68rDp/5gIrDR15UHPPNX1dcHuRBHuRBHuRBHv7r4QOHFTeZ7vvIdwAAAABJRU5ErkJggg==);
       background-size: 17px;
       mix-blend-mode: soft-light;
     }
 
-    #noise {
+    #mt-noise {
       background-image: url(https://gyng.github.io/maketerm/i/noise.gif); /* Too big for a bookmarklet */
       background-size: 60px;
       mix-blend-mode: hard-light;
       opacity: 0.4;
     }
 
-    #scanlines {
+    #mt-scanlines {
       background-image: url(https://gyng.github.io/maketerm/i/scanlines.gif); /* Too big for a bookmarklet */
       background-size: 192px;
       mix-blend-mode: screen;
       opacity: 0.1;
     }
 
-    #orange {
+    #mt-orange {
       background-color: #FCE05F;
       mix-blend-mode: color-burn;
       opacity: 0.5;
@@ -84,9 +87,9 @@ javascript: (function () {
   }
   document.head.appendChild(style);
 
-  const makeOverlay = (id) => Object.assign(document.createElement('div'), { id, className: 'overlay' });
+  const makeOverlay = (id) => Object.assign(document.createElement('div'), { id, className: 'mt-overlay' });
   const makeAndAddOverlay = (id) => document.body.appendChild(makeOverlay(id));
-  ['grill', 'noise', 'scanlines', 'orange'].forEach(makeAndAddOverlay);
+  ['mt-grill', 'mt-noise', 'mt-scanlines', 'mt-orange'].forEach(makeAndAddOverlay);
 
   console.log('ＨＥＬＬＯ　ＷＯＲＬＤ');
 }());
@@ -101,6 +104,7 @@ javascript: (function () {
       <p>※ＵＬＴＲＡ　ＧＲＡＰＨＩＣＳ　ＲＥＱＵＩＲＥＳ　Ａ　ＧＯＯＤ　ＢＬＩＴＴＥＲ　＆　ＦＵＮＣＴＩＯＮＩＮＧ　ＩＮＴＥＲＮＥＴ　ＣＯＮＮＥＣＴＩＯＮ　（２４００　ＢＡＵＤ　ＷＡＲＮＩＮＧ）</p>
       <p>※ＣＯＮＴＥＮＴ　ＳＥＣＵＲＩＴＹ　ＰＯＬＩＣＹ　ＭＡＹ　ＢＬＯＣＫ　ＳＣＲＩＰＴ　ＦＲＯＭ　ＲＵＮＮＩＮＧ</p>
       <p><a href="https://github.com/gyng/maketerm">※ＧＩＴＨＵＢ　ＰＲＯＪＥＣＴ　ＰＡＧＥ</a></p>
+      <p><a href="examples/curve/index.html">※ＬＥＴ’Ｓ　ＡＬＬ　ＬＯＶＥ　ＬＡＩＮ！</a></p>
     </center>
   </body>
 </html>
