--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@ javascript: (function () {
       <p>※ＵＬＴＲＡ　ＧＲＡＰＨＩＣＳ　ＲＥＱＵＩＲＥＳ　Ａ　ＧＯＯＤ　ＢＬＩＴＴＥＲ　＆　ＦＵＮＣＴＩＯＮＩＮＧ　ＩＮＴＥＲＮＥＴ　ＣＯＮＮＥＣＴＩＯＮ　（２４００　ＢＡＵＤ　ＷＡＲＮＩＮＧ）</p>
       <p>※ＣＯＮＴＥＮＴ　ＳＥＣＵＲＩＴＹ　ＰＯＬＩＣＹ　ＭＡＹ　ＢＬＯＣＫ　ＳＣＲＩＰＴ　ＦＲＯＭ　ＲＵＮＮＩＮＧ</p>
       <p><a href="https://github.com/gyng/maketerm">※ＧＩＴＨＵＢ　ＰＲＯＪＥＣＴ　ＰＡＧＥ</a></p>
-      <p><a href="examples/curve/index.html">※ＬＥＴ’Ｓ　ＡＬＬ　ＬＯＶＥ　ＬＡＩＮ！</a></p>
+      <p><a href="http://sugoi.pw/maketerm/examples/curve/">※ＬＥＴ’Ｓ　ＡＬＬ　ＬＯＶＥ　ＬＡＩＮ！</a></p>
     </center>
   </body>
 </html>
