Add links to makeglitch on demo site and readme

--- a/index.template.html
+++ b/index.template.html
@@ -25,6 +25,7 @@
       <p>※ＵＬＴＲＡ　ＧＲＡＰＨＩＣＳ　ＲＥＱＵＩＲＥＳ　Ａ　ＧＯＯＤ　ＢＬＩＴＴＥＲ　＆　ＦＵＮＣＴＩＯＮＩＮＧ　ＩＮＴＥＲＮＥＴ　ＣＯＮＮＥＣＴＩＯＮ　（２４００　ＢＡＵＤ　ＷＡＲＮＩＮＧ）</p>
       <p>※ＣＯＮＴＥＮＴ　ＳＥＣＵＲＩＴＹ　ＰＯＬＩＣＹ　ＭＡＹ　ＢＬＯＣＫ　ＳＣＲＩＰＴ　ＦＲＯＭ　ＲＵＮＮＩＮＧ</p>
       <p><a href="https://github.com/gyng/maketerm">※ＧＩＴＨＵＢ　ＰＲＯＪＥＣＴ　ＰＡＧＥ</a></p>
+      <p><a href="https://gyng.github.io/makeglitch">※【ＮＥＷ】　ＣＨＥＣＫ　ＯＵＴ　ＭＡＫＥＧＬＩＴＣＨ！</a></p>
       <p><a href="http://sugoi.pw/maketerm/examples/curve/">※ＬＥＴ’Ｓ　ＡＬＬ　ＬＯＶＥ　ＬＡＩＮ！</a></p>
     </center>
   </body>
